# python-oceans

./: .buildinfo  .coveragerc  .doctr-files  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  RPSstuff.html  colormaps.html  datasets.html  filters.html  genindex.html  github_deploy_key.enc  github_deploy_key_pyoceans_python_oceans.enc  index.html  objects.inv  ocfis.html  plotting.html  py-modindex.html  pyproject.toml  register.py  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/workflows/: .pre-commit-config.yaml  .tests.yml  Conda-test.yml  TESTS.yml  conda-tests.yml  deploy-docs.yml  pip-tests.yml  pre-commit.yml  pypi.yml  test-pip.yml  test-pypy.yml  testpip.yml  tests.yml
_modules/: index.html
_modules/oceans/: RPSstuff.html  colormaps.html  datasets.html  filters.html  ocfis.html  plotting.html
_sources/: RPSstuff.rst.txt  filters.rst.txt  index.rst.txt
_static/: documentation_options.js
ci/: before_install.sh
docs/source/: RPSstuff.rst  colormaps.rst  conf.py  datasets.rst  filters.rst  ocfis.rst  plotting.rst
notebooks/: fetch_datasets.ipynb
oceans/: RPSstuff.py  __init__.py  _version.py  colormaps.py  datasets.py  filters.py  ocfis.py  plotting.py  synop.py  utilities.py  vortices.py
oceans/RPSstuff/: RPSstuff.py  __init__.py
oceans/RPStuff/: RPStuff.py  __init__.py
oceans/SciPy-Cookbook/: brownian-1D.py  brownian-2D.py  brownian.py  cookb_signalsmooth.py  corr.py  filtfilt.py  ransac.py  savitzky_golay.py  sgolay2d.py  smooth-2d.py  two_springs.py  two_springs_plot.py  two_springs_solver.py
oceans/SciPy-Cookbook/LineIntegralConvolution/: lic_internal.c
oceans/SciPy-Cookbook/laplace/: laplace.m
oceans/TODO/: TODO.rst  barnes.m  test_pcatool.m
oceans/colormaps/: __init__.py  colormaps.py  gimp256.mat  gmt.mat  gmtColormap.py
oceans/colormaps/cmap_data/: GMT_cyclic.cpt  GMT_drywet.cpt  GMT_haxby.cpt  GMT_hot.cpt  GMT_nighttime.cpt  GMT_ocean.cpt  GMT_panoply.cpt  GMT_rainbow.cpt  GMT_sealand.cpt  gimp256.pkl  gmt.pkl
oceans/colormaps/cpt/: GMT_cool.cpt  GMT_copper.cpt  GMT_gebco.cpt  GMT_jet.cpt  GMT_no_green.cpt  GMT_polar.cpt  GMT_relief.cpt  GMT_seis.cpt  GMT_split.cpt  GMT_topo.cpt  GMT_wysiwyg.cpt
oceans/ctd/: __init__.py  cruise.py  ctd.py  synop.py
oceans/datasets/: __init__.py  datasets.py
oceans/ff_tools/: __init__.py  ff_tools.py  matlabpipe.py  ocfis.py  plotting.py  smoothers.py  synop.py  teaching.py  time_series.py  windrose.py
oceans/filters/: __init__.py  filters.py
oceans/mfiles-ToDo/: currents.m  davefilt2.m  dynmodes.m  emery_thompson_eof.m  eof_svd.m  integral.m  intersection.m  line_plane_intersect.m  mld.m  rdi_coordTransform.m  rdradcp_dougBIT.m  relax.m  rotation_matrix.m
oceans/mlabwrap/: __init__.py  matlabpipe.py  mlabraw.py  mlabwrap.py
oceans/ocfis/: __init__.py  ocfis.py  synop.py
oceans/plotting/: __init__.py  ncview.py  plotting.py  windrose.py
oceans/sandbox/: __init__.py  exemplo_matlabpipe.py  fdatasets.py  ftopo.py  fwoa.py  lines.py  makegif.py  smoo2.py  testdata.npz  weim.py
oceans/seawater/: __init__.py  constants.py  csiro.py  gamma_GP_from_SP_pt.py  sw_extras.py  waves.py
oceans/seawater/docs/: python-test.txt
oceans/seawater/test/: csiro_test.py  matlab-test.txt  o2.csv  python-test.txt
oceans/sw_extras/: __init__.py  gamma_GP_from_SP_pt.py  sw_extras.py  waves.py
oceans/test/: test_ctd.py
oceans/test/data/: AMB09_004_CTD_rad1.cnv.bz2  AMB09_055_CTD_rad3.bl
oceans/test/test_colormaps/: test_colormaps.py
oceans/test/test_ctd/data/: AMB09_059_CTD_rad3.cnv.REMOVED.git-id
oceans/tests/: test_sw_extras.py
oceans/utilities/: deco.py
tests/: test_sw_extras.py
