[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[project]
name = "oceans"
description = "Misc functions for oceanographic data analysis"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "André Palóczy, Arnaldo Russo, Filipe Fernandes"},
]
requires-python = ">=3.8"
dynamic = [
  "version",
]
dependencies = [
  "gsw",
  "matplotlib",
  "numpy",
  "pandas>=1.0.1",
  "seawater",
]
[project.optional-dependencies]
extras = [
  "cartopy",
  "iris",
  "netcdf4",
  "pandas",
  "scipy",
]
[project.urls]
documentation = "https://pyoceans.github.io/python-oceans/"
homepage = "https://pypi.python.org/pypi/oceans/"
repository = "https://github.com/pyoceans/python-oceans"

[tool.setuptools]
packages = ["oceans"]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
oceans = ["colormaps/cmap_data/*.dat"]

[tool.setuptools_scm]
write_to = "oceans/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.pytest.ini_options]
markers = [
  "web: marks tests require connection (deselect with '-m \"not web\"')"
  ]

[tool.ruff]
select = [
    "F", # flakes
    "I", # import sorting
    "U", # upgrade
]
target-version = "py311"
line-length = 79

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E402"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.check-manifest]
ignore = [
    ".coveragerc",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]
