
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = oceans/_version.py
versionfile_build = oceans/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
markers =
    web: marks tests require connection (deselect with '-m "not web"')

[metadata]
description-file = README.rst
license_file = LICENSE.txt

[check-manifest]
ignore =
    .travis.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*
